--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta name="description" content="">
   <title>Secretly</title>
-  <link rel="stylesheet" href="/static/dist/style.css" type="text/css" />
+  <link rel="stylesheet" href="../static/dist/style.css" type="text/css" />
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
 </head>
